--- a/style.css
+++ b/style.css
@@ -1,39 +1,37 @@
-@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
-
-*{
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap'); * {
     font-family: 'Quicksand', sans-serif;
 }
 
-a{
+a {
     text-decoration: none;
-    color: #fff;
+    color: #333333;
 }
 
-body{
-    color: #fff;
-    background-color: #e9ff99;
-    background-image:
+body {
+    color: #333333;
+    /* background-color: #e9ff99; */
+    /* background-image:
         radial-gradient(at 9% 89%, hsla(215, 90%, 73%, 1) 0px, transparent 50%),
         radial-gradient(at 72% 6%, hsla(331, 74%, 64%, 1) 0px, transparent 50%),
         radial-gradient(at 24% 19%, hsla(14, 90%, 74%, 1) 0px, transparent 50%),
         radial-gradient(at 65% 6%, hsla(6, 79%, 76%, 1) 0px, transparent 50%),
         radial-gradient(at 20% 98%, hsla(316, 72%, 64%, 1) 0px, transparent 50%),
         radial-gradient(at 44% 9%, hsla(40, 96%, 77%, 1) 0px, transparent 50%),
-        radial-gradient(at 10% 9%, hsla(76, 65%, 63%, 1) 0px, transparent 50%);
+        radial-gradient(at 10% 9%, hsla(76, 65%, 63%, 1) 0px, transparent 50%); */
     min-height: 100vh;
 }
 
-.container{
+.container {
     display: flex;
     justify-content: center;
 }
 
-.glass-container{
+.glass-container {
     display: block;
     max-width: 72vw;
     margin-top: 10vh;
     margin-bottom: 30px;
-    background: rgba(0, 0, 0, 0.56);
+    background: rgb(255 255 255 / 56%);
     padding: 50px;
     border-radius: 16px;
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
@@ -41,48 +39,48 @@ body{
     -webkit-backdrop-filter: blur(11.6px);
 }
 
-.logo{
+.logo {
     display: inline-block;
     font-size: 30px;
     font-weight: 600;
     margin-top: -10px;
 }
 
-ul.nav-links{
+ul.nav-links {
     margin: 0;
     float: right;
     display: flex;
     list-style: none;
 }
 
-li.nav-link{
+li.nav-link {
     display: inline-block;
     margin-left: 30px;
     font-size: 17px;
     font-weight: 300;
 }
 
-.content{
+.content {
     display: flex;
     width: 100%;
 }
 
-.main{
+.main {
     margin-top: 10vh;
     display: inline-block;
     padding: 20px;
 }
 
-.main h2{
+.main h2 {
     font-size: 35px;
 }
 
-.main p{
+.main p {
     font-size: 16px;
     line-height: 23px;
 }
 
-button{
+button {
     margin-top: 10px;
     width: 100%;
     height: 40px;
@@ -95,22 +93,22 @@ button{
     transition: all 0.3s ease;
 }
 
-button:hover{
+button:hover {
     border-color: #2668db;
     background-color: #2668db;
 }
 
-.image-wrapper{
+.image-wrapper {
     display: flex;
     margin-top: 5vh;
     position: relative;
 }
 
-.image-wrapper img{
+.image-wrapper img {
     max-width: 500px;
 }
 
-.attrebute{
+.attrebute {
     position: absolute;
     bottom: 20px;
     right: 0;
@@ -118,28 +116,33 @@ button:hover{
 }
 
 @media screen and (max-width: 1075px) {
-    .content{
+    .content {
         flex-direction: column;
     }
 }
 
 @media screen and (max-width: 720px) {
-    .logo{
+    .logo {
         font-size: 22px;
     }
-    li.nav-link{
+
+    li.nav-link {
         font-size: 13px;
     }
-    .main h2{
+
+    .main h2 {
         font-size: 28px;
     }
-    .main p{
+
+    .main p {
         font-size: 15px;
     }
-    button{
+
+    button {
         font-size: 13px;
     }
-    .image-wrapper img{
+
+    .image-wrapper img {
         max-width: 400px;
     }
 }
